k8s/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ebitda
  labels:
    app.kubernetes.io/name: ebitdamax-apn
    environment: staging
