k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ebitda
  namespace: ebitda
  labels:
    app.kubernetes.io/name: ebitdamax-apn
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 32m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/proxy-buffers-number: '8'
    nginx.ingress.kubernetes.io/proxy-busy-buffers-size: 256k
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '10'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '120'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '120'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ebitdamax-apn.dev-agrinas.id
      secretName: ebitda-tls
  rules:
    - host: ebitdamax-apn.dev-agrinas.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ebitda
                port:
                  number: 80
